-Fixed a bug where main menu changes position after collapsing when user scrolls with menu open on mobile
- file bootstrap.css fixed a bug where there was an empty
space in the capstone section when on tablet.

-resized images to 222px in capstone section
-technology requirements image reduced storage space

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1161,6 +1161,7 @@ pre code {
 
   .col-sm-6 {
     width: 50%;
+    max-height: 318px;
   }
 
   .col-sm-7 {
